F&GDEV/src/objects/Weekly_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Daily_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Goal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Monthly Goal</label>
        <referenceTo>Monthly_Goal__c</referenceTo>
        <relationshipLabel>Weekly Goals</relationshipLabel>
        <relationshipName>Weekly_Goals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekly_Priority__c</fullName>
        <label>Weekly Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Weekly Goal</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>Weekly_Priority__c</columns>
        <columns>Monthly_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>Follow_up_Date__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Focus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>Daily_Focus</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4) and 5</booleanFilter>
        <columns>Weekly_Priority__c</columns>
        <columns>Monthly_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>Follow_up_Date__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Focus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Focus__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Follow_up_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Follow_up_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Daily_Focus__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Daily Focus</label>
    </listViews>
    <listViews>
        <fullName>Weekly_Focus</fullName>
        <columns>Weekly_Priority__c</columns>
        <columns>Monthly_Goal__c</columns>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>Follow_up_Date__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Focus__c</columns>
        <columns>Daily_Focus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Focus__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Weekly Focus</label>
    </listViews>
    <nameField>
        <label>Weekly Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>